More doc changes.
	* doc/specs/indexing.sty: Longer.
	* doc/specs/stdlib.tex: Various changes.

--- a/doc/specs/indexing.sty
+++ b/doc/specs/indexing.sty
@@ -5,6 +5,7 @@
 \indexing{Functions}{function}
 \indexing{Identifiers}{identifier}
 \indexing{Keywords}{keyword}
+\indexing{Lazies}{lazy}
 \indexing{Lexical closures}{closure (lexical)}
 \indexing{Local variables}{variable!local}
 \indexing{Objects}{object}
