Revert "Separate modifiers with commas, like named arguments."
This reverts commit 41842db3897e5e3f72e50b85be982e10dc6d1033.

Mefyl: You're fired.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -92,7 +92,7 @@ x = value modifier1: v1 modifier2: v2;
 
 becomes:
 
-x = (value, modifier1: v1, modifier2: v2);
+x = (value modifier1: v1 modifier2: v2);
 
 Parsing of integer literals
 ---------------------------
