--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -13,14 +13,15 @@ elements.
 \subsection{Construction}
 
 List can be created with their literal syntax, as shown in
-\autoref{sec:us-syn-lit-list}. They can also be created with the
-\lstinline|new| method of \lstinline|List|, given the initial members
-(\autoref{lst:new-list}).
+\autoref{sec:us-syn-lit-list}.
 
-\begin{urbiscript}[caption=List.new, label=lst:new-list]
-List.new(nil, "foo", 42);
-[00000000] [nil, "foo", 42]
-\end{urbiscript}
+%% They can also be created with the \lstinline|new| method of
+%% \lstinline|List|, given the initial members (\autoref{lst:new-list}).
+%%
+%% \begin{urbiscript}[caption=List.new, label=lst:new-list]
+%% List.new(nil, "foo", 42);
+%% [00000000] [nil, "foo", 42]
+%% \end{urbiscript}
 
 \subsection{Methods}
 
