--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -2,6 +2,20 @@ This file summarizes the user-visible changes since the first beta 1
 release.
 
 *******************************
+* New since kernel 2.0 beta 3 *
+*******************************
+
+Meta
+====
+
+Documentation
+-------------
+
+An initial sketch of documentation is included.
+
+
+
+*******************************
 * New since kernel 2.0 beta 2 *
 *******************************
 
