More about the doc.
	* doc/RELEASE-NOTES.txt: We have a tutorial.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -11,7 +11,8 @@ Meta
 Documentation
 -------------
 
-An initial sketch of documentation is included.
+An initial sketch of documentation (a tutorial, and the language and
+library specifications) is included.
 
 
 
