Factor the LaTeX style bw specs and tutorial.
	* doc/specs/urbi-specs.sty: Rename as...
	* doc/urbi-report.sty: this.
	* doc/Makefile.am (TEXI2DVI_FLAGS): Adjust to find it.
	* doc/specs/urbi-specs.tex: Adjust.
	* doc/tutorial/urbi-tutorial.tex: Remove all the duplication,
	rather, use urbi-report.sty.
	* doc/specs/local.mk, doc/tutorial/local.mk: Adjust dependencies.

--- a/doc/specs/urbi-specs.tex
+++ b/doc/specs/urbi-specs.tex
@@ -3,7 +3,7 @@
   \usepackage{myindex}
   \usepackage{index}
   \makeindex
-  \usepackage{urbi-specs}
+  \usepackage{urbi-report}
   \usepackage{indexing}
 
 
