--- a/doc/tutorial/urbi-tutorial.tex
+++ b/doc/tutorial/urbi-tutorial.tex
@@ -1,86 +1,9 @@
 \documentclass[openright,twoside,12pt]{report}
 
-% PACKAGES
-\usepackage{a4wide}
-\usepackage{graphicx}
-\usepackage[utf8]{inputenc}
-\usepackage{mycxx}
-\usepackage{myhyperref}
-\usepackage{mylistings}
-\usepackage{xspace}
-
-% SHORTHANDS
-\newcommand{\ai}{AI\xspace}
-\newcommand{\caml}{Caml\xspace}
-\newcommand{\io}{Io\xspace}
-\newcommand{\java}{Java\xspace}
-\newcommand{\js}{JavaScript\xspace}
-\newcommand{\lua}{Lua}
-\newcommand{\lisp}{Lisp}
-\newcommand{\matlab}{MatLab\xspace}
-\newcommand{\pascal}{PASCAL\xspace}
-\newcommand{\python}{Python\xspace}
-\newcommand{\ruby}{Ruby\xspace}
-\newcommand{\urbi}{Urbi\xspace}
-
-% LISTINGS
-
-\lstset{language=[interactive]Urbi}
-
-\definecolor{keywords}{rgb}{0.2,0.2,0.8}
-\definecolor{comments}{rgb}{0.8,0.5,0}
-\definecolor{string}{rgb}{0.0,0.5,0.0}
-\definecolor{bg}{rgb}{0.9,0.9,1}
-
-\lstset{
-  keywordstyle=\color{keywords}\bfseries,
-  commentstyle=\color{comments},
-  stringstyle=\color{string},
-  backgroundcolor=\color{bg},
-  aboveskip=.6cm,
-  captionpos=b,
-  frame=single,
-  basicstyle=\ttfamily,
-  showstringspaces=false,
-}
+  \usepackage{urbi-report}
 
 % COMMANDS
 \newcommand{\lst}[1]{\autoref{lst:#1}}
-
-\makeatletter
-\renewcommand{\maketitle}{
-  \begin{titlepage}
-
-    \vfill
-
-    \begin{figure}[htp]
-      \centering
-      \includegraphics[width=12cm]{img/urbi-logo}
-    \end{figure}
-
-    \begin{center}
-      {\Huge\bf\@title\\}
-      \vspace{1cm}
-      {\Large \@author\\}
-      \vspace{1cm}
-      {\large \@date\\}
-    \end{center}
-
-    \vfill
-
-    \begin{figure}[htp]
-      \centering
-      \includegraphics[width=12cm]{img/gostai}
-    \end{figure}
-
-    \vfill
-    \global\let\title\relax
-  \end{titlepage}
-}
-\makeatother
-
-% STYLE
-\hypersetup{colorlinks, citecolor=blue, linkcolor=blue, urlcolor=blue}
 
 % CONFIGURATION
 \title{Tutorial}
