--- a/doc/tutorial/urbi-tutorial.tex
+++ b/doc/tutorial/urbi-tutorial.tex
@@ -54,7 +54,7 @@ Once you've got an \urbi server running, you can connect to it with a
 text client such as telnet or netcat on port 54000. You can then start
 inputting commands, terminated by semicolons. Like most interactive
 interpreters, \urbi will evaluate the given commands and print out the
-results (\lst{interaction}).
+results (\autoref{lst:interaction}).
 
 \begin{lstlisting}[caption=Evaluating literal values,label=lst:interaction]
   42;
@@ -70,7 +70,7 @@ since those timestamp can be irrelevant to some examples, they will
 often be filled with zeroes through this documentation.
 
 Let's now try to perform some real computation, e.g. some basic
-mathematical expressions, as in \lst{expr}. Again, the server prints
+mathematical expressions, as in \autoref{lst:expr}. Again, the server prints
 out the result of the evaluation of every line.
 
 \begin{lstlisting}[caption=Evaluating composite expressions,label=lst:expr]
@@ -98,7 +98,7 @@ to study more in-depth examples after.
 Commenting your code is crucial, so let's start by learning how to do
 this in \urbi. Comments are completely ignored by the interpreter, and
 can be left as documentation, reminder, \ldots \urbi support \C style,
-\Cxx style and shell-script style comments (\lst{comments}):
+\Cxx style and shell-script style comments (\autoref{lst:comments}):
 
 \begin{itemize}
 \item \C style comments start with \texttt{/*} and end with \texttt{*/}.
@@ -137,7 +137,7 @@ several other literals, such as:
 \end{itemize}
 
 These literal values can be obtained with the syntax presented in
-\lst{literals}.
+\autoref{lst:literals}.
 
 \begin{lstlisting}[caption=Literals,label=lst:literals]
   42; // Integer literal
@@ -162,7 +162,7 @@ Listing \ref{lst:literals} highlights some point:
 \section{Function calls}
 
 You can call functions with the classical, mathematical notation
-(\lst{calling-functions}).
+(\autoref{lst:calling-functions}).
 
 \begin{lstlisting}[caption=Calling functions,label=lst:calling-functions]
   cos(0); // Compute cosinus
@@ -176,7 +176,7 @@ You can call functions with the classical, mathematical notation
 Again, the result of the evaluation are printed out. You can see here
 that function in \urbi can be variadic, that is, take different number
 of arguments, such as the \texttt{max} function. Let's now try the
-\texttt{echo} function, that prints out its argument (\lst{printing}).
+\texttt{echo} function, that prints out its argument (\autoref{lst:printing}).
 
 \begin{lstlisting}[caption=Printing out,label=lst:printing]
   echo("Hello world!");
@@ -191,7 +191,7 @@ void, no evaluation result is printed.
 
 Variables can be introduced with the \texttt{var} keyword, given a
 name and an initial value. They can be assigned new values with the
-\texttt{=} operator (\lst{variables}).
+\texttt{=} operator (\autoref{lst:variables}).
 
 \begin{lstlisting}[caption=Using variables,label=lst:variables]
   var x = 42;
@@ -210,7 +210,7 @@ identifiers is also the same as in \Cxx: they may contain alphanumeric
 characters and underscores, but they may not start with a digit.
 
 You may ommit the initialization value, in which case it defaults to
-nil (\lst{local-uninit}).
+nil (\autoref{lst:local-uninit}).
 
 \begin{lstlisting}[caption=Variables initialization defaults to
   nil,label=lst:local-uninit]
@@ -230,7 +230,7 @@ nil (\lst{local-uninit}).
 
 Scopes can be introduced with curly brackets (\texttt{\{\}}), and can
 contain any number of expressions. Variables declared in a scope only
-exist within this scope (\lst{scope}).
+exist within this scope (\autoref{lst:scope}).
 
 \begin{lstlisting}[caption=Scoping a variable,label=lst:scope]
   {
@@ -249,7 +249,7 @@ closing curly bracket.
 
 Methods are called on objects with the dot (\texttt{.}) notation as in
 \Cxx. Method calls can be chained. Methods with no arguments don't
-require the parentheses (\lst{method-call}).
+require the parentheses (\autoref{lst:method-call}).
 
 \begin{lstlisting}[caption=Calling methods,label=lst:method-call]
   0.cos();
@@ -275,7 +275,7 @@ In \lstinline|obj.method|, we say that \texttt{obj} is the {\em
 You know how to call routines, let's learn how to write
 some. Functions can be declared thanks to the \texttt{function}
 keyword, followed by the comma separated, parentheses surrounded list
-of formal arguments, and the body between curly brackets (\lst{function-def}).
+of formal arguments, and the body between curly brackets (\autoref{lst:function-def}).
 
 \begin{lstlisting}[caption=Defining a function,label=lst:function-def]
   // Define myFunction
@@ -303,7 +303,7 @@ Since \urbi supports functional programming, function are first class
 citizen. Which means they are values, just as \texttt{0} or
 \texttt{"foobar"}. So your function definition evaluation yields the
 new function, and as always, the interpreter prints out the evaluation
-result, thus showing you the function again. \lst{function-values}
+result, thus showing you the function again. \autoref{lst:function-values}
 might help you understanding this.
 
 
@@ -337,7 +337,7 @@ here.
 
 Since this output is often irrelevant, we will sometimes hide the
 printed result, replacing it with an ellipse (\ldots), as in
-\lst{function-arg}, which presents a function with arguments.
+\autoref{lst:function-arg}, which presents a function with arguments.
 
 \begin{lstlisting}[caption=Function with
   arguments,label=lst:function-arg]
@@ -354,7 +354,7 @@ printed result, replacing it with an ellipse (\ldots), as in
 As you probably guessed, the \texttt{return} keyword enables you to
 return a value from the function. If no \texttt{return} statement is
 executed, the evaluation of the last expression is returned
-(\lst{no-return}).
+(\autoref{lst:no-return}).
 
   \begin{lstlisting}[caption=Return value is the last evaluated value,
     label=lst:no-return]
@@ -386,7 +386,7 @@ names, each of which indexes a value --- just like a dictionary. You
 can get an object's slot value by using the dot (\texttt{.}) operator
 on this object, followed by the name of the slot. You can list the
 names of the slots of an object with the \texttt{slotNames}
-method. \lst{object-slots} makes this very clear: we dissect an object
+method. \autoref{lst:object-slots} makes this very clear: we dissect an object
 to point out its structure.
 
 \begin{lstlisting}[caption=Inspecting an \urbi
@@ -409,7 +409,7 @@ parent type of every object (in fact, since \urbi is prototype-based,
 \texttt{Object} is the uppermost prototype of every object, but we'll
 talk about prototypes later). An instance of object, is an empty,
 neutral object, so let's start by instanciating one with the
-\texttt{clone} method of \texttt{Object} (\lst{object-new}).
+\texttt{clone} method of \texttt{Object} (\autoref{lst:object-new}).
 
 \begin{lstlisting}[caption=Instanciating a new object,
   label=lst:object-new]
@@ -435,7 +435,7 @@ zeroes in this document.
 We're now getting back to our empty object. We want to give it two
 slots, \texttt{a} and \texttt{b}, with values \lstinline|42| and
 \lstinline|"foo"| respectively. We can do this with the
-\texttt{setSlot} method (\lst{setslot}), which takes the slot name and
+\texttt{setSlot} method (\autoref{lst:setslot}), which takes the slot name and
 its value.
 
 \begin{lstlisting}[caption=Defining slots, label=lst:setslot]
@@ -448,7 +448,7 @@ its value.
 \end{lstlisting}
 
 Here we successfully created our first slot, a. A good shorthand for
-setting slot is using the \texttt{var} keyword (\lst{setslot-var}).
+setting slot is using the \texttt{var} keyword (\autoref{lst:setslot-var}).
 
 \begin{lstlisting}[caption=Defining slots with var, label=lst:setslot-var]
   // This is equivalent to o.setSlot("b", "foo")
@@ -465,7 +465,7 @@ the name of the slot at the time of writing the code. With the former
 one, you can compute the slot name at execution time. Likewise, you
 can read a slot with a run-time determined name with the
 \texttt{getSlot} method, which takes the slot name as
-argument. \lst{getslot-setslot} illustrates the use of
+argument. \autoref{lst:getslot-setslot} illustrates the use of
 \texttt{getSlot} and \texttt{setSlot} to read and write slots whose
 names are unknown at code-writing time.
 
@@ -507,7 +507,7 @@ them afterwards, even if their name is dynamically computed, with
 there's a method to update the value of the slot. Guess what, there's
 one, and it's named\ldots \texttt{updateSlot} (originality
 award). Getting back to our \texttt{o} object, let's try to update one
-of its slot (\lst{updateslot}).
+of its slot (\autoref{lst:updateslot}).
 
 \begin{lstlisting}[caption=Updating a slot, label=lst:updateslot]
   o.a;
@@ -519,7 +519,7 @@ of its slot (\lst{updateslot}).
 \end{lstlisting}
 
 Again, there's a shorthand for \texttt{updateSlot}: operator
-\texttt{=} (\lst{updateslot-eq}).
+\texttt{=} (\autoref{lst:updateslot-eq}).
 
 \begin{lstlisting}[caption=Updating a slot with '\texttt{=}',
   label=lst:updateslot-eq]
@@ -539,7 +539,7 @@ name you don't know at code-writing time.
 Note that defining the same slot twice, be it with \texttt{setSlot} or
 \texttt{var}, is an error. The slot must be defined once with setSlot,
 and subsequent writes must be done with \texttt{updateSlot}
-(\lst{redefinition}).
+(\autoref{lst:redefinition}).
 
 \begin{lstlisting}[caption=Defining a slot twice is an error,
   label=lst:redefinition]
@@ -554,7 +554,7 @@ and subsequent writes must be done with \texttt{updateSlot}
 \end{lstlisting}
 
 Finally, we may want to remove a slot from an object. This can be done
-with a method whose name I let you guess (\lst{removeslot}).
+with a method whose name I let you guess (\autoref{lst:removeslot}).
 
 \begin{lstlisting}[caption=Removing a slot, label=lst:removeslot]
   o.slotNames;
@@ -569,7 +569,7 @@ Here we are, now you can inspect and modify objects at will. Don't
 hesitate to explore \urbi objects you'll encounter through this
 documentation like this. Last point: reading, updating or removing a
 slot which does not exist is, of course an error
-(\lst{lookup-failed}).
+(\autoref{lst:lookup-failed}).
 
 \begin{lstlisting}[caption=Manipulating existent slot is an error,
   label=lst:lookup-failed]
@@ -585,7 +585,7 @@ Methods in \urbi are simply object slots containing functions. We made
 a little simplification earlier by saying that \lstinline|obj.slot| is
 equivalent to \lstinline|obj.getSlot("slot")|: if the fetched value is
 executable code such as a function, the dot form evaluates it, as
-illustrated by \lst{auto-eval}. Inside a method, you can get the
+illustrated by \autoref{lst:auto-eval}. Inside a method, you can get the
 target with the \lstinline|self| keyword - the equivalent of \Cxx's
 \texttt{this}. \lstinline|self| can be omitted if there is no
 ambiguity with local variables.
@@ -621,7 +621,7 @@ replace an attribute with a method without changing the object
 interface, since the parentheses are optional.
 
 This implies that getSlot can be a better tool for object inspection
-to avoid invoking slots, as shown by \lst{getslot-function}.
+to avoid invoking slots, as shown by \autoref{lst:getslot-function}.
 
 \begin{lstlisting}[caption=Inspecting executable slots with \texttt{getSlot},
   label=lst:getslot-function]
@@ -641,7 +641,7 @@ to avoid invoking slots, as shown by \lst{getslot-function}.
 
 So the empty function simply checks whether the target string is empty
 with the equality operator! Let's try getSloting another method in
-\lst{getslot-primitive}.
+\autoref{lst:getslot-primitive}.
 
 \begin{lstlisting}[caption=Primitives, label=lst:getslot-primitive]
   "foo".size;
@@ -660,7 +660,7 @@ have thus no means to see their inner code.
 If you're wondering what is an object and what isn't, the answer is
 simple: every single bit of value you manipulate in \urbi is an
 object, including primitive types, types themselves, functions, \ldots
-\lst{everything-object} illustrates this.
+\autoref{lst:everything-object} illustrates this.
 
 % FIXME: This does actually not work like this because the toplevel
 % isn't a local scope! puke puke puke!
@@ -692,7 +692,7 @@ values are stored and passed around. The whole point is to understand
 when variables are the same. For this, we are going to introduce a new
 method, \texttt{uid}. This method returns the target's unique
 identifier - the same one that was printed when we evaluated
-\lstinline|Object.clone|. See \lst{uid}. Of course, uids might vary
+\lstinline|Object.clone|. See \autoref{lst:uid}. Of course, uids might vary
 from an execution to another, so their value here are dummy, yet not
 null to be able to differentiate them.
 
@@ -717,7 +717,7 @@ simply returns whether its two operands are semantically equal. The
 second operator is \texttt{===}, which is the physical equality
 operator. It returns whether its two operands are the same object,
 which is equivalent to having the same uid. This can seem a bit
-confusing; let's take a look at \lst{phy-eq} to have a first example.
+confusing; let's take a look at \autoref{lst:phy-eq} to have a first example.
 
 \begin{lstlisting}[caption=Physical equality operator,
   label=lst:phy-eq]
@@ -740,7 +740,7 @@ Thanks to this operator, we can point out the fact that slots and
 local variables in \urbi have a reference semantic. That is, when you
 defining a local variable or a slot, you're not copying any value (as
 you would be in \C or \Cxx), you're only making it refer to an already
-existing value (as you would in \ruby or \java). See \lst{ref-to-same}
+existing value (as you would in \ruby or \java). See \autoref{lst:ref-to-same}
 for an illustration.
 
 \begin{lstlisting}[caption=Two references to the same object,
@@ -765,7 +765,7 @@ for an illustration.
 
 So here we see that a and c point to the same integer, while b points
 to a second one. This a non-trivial fact: any modification on a will
-affect c as well, as shown by \lst{same-ref-mod}.
+affect c as well, as shown by \autoref{lst:same-ref-mod}.
 
 \begin{lstlisting}[caption=Shared modification,
   label=lst:same-ref-mod]
@@ -786,7 +786,7 @@ affect c as well, as shown by \lst{same-ref-mod}.
 
 Updating slots or local variable doesn't update the referenced
 value. It simply change the variable to refer to the new given value,
-as illustrated by \lst{change-ref}.
+as illustrated by \autoref{lst:change-ref}.
 
 \begin{lstlisting}[caption=Updates just change the referee,
   label=lst:change-ref]
@@ -812,7 +812,7 @@ of what your variable are referring to.
 
 Finally, function and method arguments are also passed by
 reference. Which means they can be modified by the function
-(\lst{arg-mod}).
+(\autoref{lst:arg-mod}).
 
 \begin{lstlisting}[caption=Function modifying its argument,
   label=lst:arg-mod]
@@ -832,7 +832,7 @@ reference. Which means they can be modified by the function
   [00000000] ["flag"]
 \end{lstlisting}
 
-Beware however of \lst{arg-no-mod}, where the given function doesn't
+Beware however of \autoref{lst:arg-no-mod}, where the given function doesn't
 have the behavior you may have expected.
 
 \begin{lstlisting}[caption=Function failing to modify its argument,
@@ -876,7 +876,7 @@ The \texttt{if} construct is the same has \C/\Cxx's one. The
 an expression, and optionally the \texttt{else} keyword and another
 expression. If the condition evaluates to true, the first expression
 is evaluated. Otherwise, the second expression is evaluated if
-present (\lst{if}).
+present (\autoref{lst:if}).
 
 \begin{lstlisting}[caption=The \texttt{if} construct, label=lst:if]
   if (true)
@@ -889,7 +889,7 @@ present (\lst{if}).
   [00000000] *** ok
 \end{lstlisting}
 
-Note that \lstinline|if| themselves are values (\lst{if-value}).
+Note that \lstinline|if| themselves are values (\autoref{lst:if-value}).
 
 \begin{lstlisting}[caption=\texttt{if} are values, label=lst:if-value]
   echo({ if (false) "a" else "b" });
@@ -902,7 +902,7 @@ The \texttt{while} construct is, again, the same as in \C/\Cxx. The
 \texttt{while} keyword is followed by a condition between parentheses
 and an expression. If the expression evaluation is false, the
 execution jumps after the while block; otherwise, the expression is
-evaluated and control jumps before the while block (\lst{while}).
+evaluated and control jumps before the while block (\autoref{lst:while}).
 
 % FIXME: += wasn't introduced
 \begin{lstlisting}[caption=The \texttt{while} construct,
@@ -942,7 +942,7 @@ collection such as a list. The \texttt{for} keyword, followed by
 scope, executes the scope for every element in the collection
 resulting of the evaluation of the expression, with the variable named
 with the identifier referring to the list element. If you didn't get
-the sentence, don't worry, \lst{for-in} is self explanatory.
+the sentence, don't worry, \autoref{lst:for-in} is self explanatory.
 
 \begin{lstlisting}[caption=Collection iteration with \texttt{for},
   label=lst:for-in]
@@ -982,7 +982,7 @@ the switch after a case has been executed (no need to \texttt{break}).
 \label{section:constructs/do}
 
 A do scope is a shorthand to perform several actions on an
-object. Consider \lst{no-do}.
+object. Consider \autoref{lst:no-do}.
 
 \begin{lstlisting}[caption=Lot of code bloat,label=lst:no-do]
   var obj = Object.clone;
@@ -996,7 +996,7 @@ object. Consider \lst{no-do}.
 \end{lstlisting}
 
 The exact same result can be obtained with a short do scope, that
-redirect method calls to their target, as in \lst{do}. This is similar
+redirect method calls to their target, as in \autoref{lst:do}. This is similar
 to the \pascal ``\texttt{with}'' construct.
 
 
@@ -1029,7 +1029,7 @@ tool.
 
 Scope are expressions, just as \lstinline|1 + 1| or \lstinline|"foo"|.
 They evaluate to the last expression they contain, or void if they're
-empty. \lst{scope-exp} illustrate the use of scopes as
+empty. \autoref{lst:scope-exp} illustrate the use of scopes as
 expressions. Note that the last semicolon inside a scope is optional.
 
 \begin{lstlisting}[caption=Using scope as expressions,label=lst:scope-exp]
@@ -1047,7 +1047,7 @@ expressions. Note that the last semicolon inside a scope is optional.
 Scopes can be nested. Variables can be redefined in subscope. In this
 case, the new variables hide the old one in this scope (that is, the
 innermost variable takes precedence), as illustrated in
-\lst{scope-hiding}.
+\autoref{lst:scope-hiding}.
 
 \begin{lstlisting}[caption=Redefining variables in
   subscopes,label=lst:scope-hiding]
@@ -1078,7 +1078,7 @@ innermost variable takes precedence), as illustrated in
 Functions can be defined anywhere local variables can --- that is,
 about anywhere. These functions' visibility are limited to the scope
 they're defined in, like variables. This enables for instance to write
-local helper functions (\lst{helper}).
+local helper functions (\autoref{lst:helper}).
 
 \begin{lstlisting}[caption=Local helper function, label=lst:helper]
   function max3(a, b, c) // Max of three values
@@ -1099,7 +1099,7 @@ local helper functions (\lst{helper}).
 A closure are the capture by a function of a variable external to this
 function. \urbi supports lexical closure: functions can refer to outer
 local variables, as long as they are visible from the point of
-declaration of the function \lst{read-closure}.
+declaration of the function \autoref{lst:read-closure}.
 
 \begin{lstlisting}[caption=Capturing variables with lexical closures,
   label=lst:read-closure]
@@ -1123,7 +1123,7 @@ declaration of the function \lst{read-closure}.
 \end{lstlisting}
 
 Closures can also write to captured variables, as shown in
-\lst{write-closure}.
+\autoref{lst:write-closure}.
 
 % Fixme: these are not actually closures because of the toplevel ...
 \begin{lstlisting}[caption=Updating captured variables,
@@ -1179,7 +1179,7 @@ several popular script languages such as \io or \js.
 Consider pairs for instance. Pairs are objects that hold two values,
 first and second, like an \texttt{std$::$pair} in \Cxx. Since \urbi is
 prototype-based, there is no pair class. Instead, \lstinline|Pair| is
-really a pair (\lst{proto}).
+really a pair (\autoref{lst:proto}).
 
 \begin{lstlisting}[caption=Prototypes in \urbi, label=lst:proto]
   Pair;
@@ -1188,7 +1188,7 @@ really a pair (\lst{proto}).
 
 We can see here that Pair is a pair whose two values are equal to nil
 --- which is a reasonable neutral value. To get a pair of our own, we
-simply clone \lstinline|Pair| (\lst{clone}). We can then use it as a
+simply clone \lstinline|Pair| (\autoref{lst:clone}). We can then use it as a
 regular pair.
 
 \begin{lstlisting}[caption=Cloning, label=lst:clone]
@@ -1207,7 +1207,7 @@ regular pair.
 Since \lstinline|Pair| is a regular pair object, you can modify and
 use it at will. Yet this is not necessarily a good idea, since you
 will alter your base prototype, and subsequent cloning will inherit
-these modification (\lst{alter-proto}).
+these modification (\autoref{lst:alter-proto}).
 
 \begin{lstlisting}[caption=Altering a prototype, label=lst:alter-proto]
   var before = Pair.clone;
@@ -1223,7 +1223,7 @@ these modification (\lst{alter-proto}).
 In prototype-based language, 'is-a' relations (being an instance of
 some type) and inheritance relations (extending another type) are
 simplified in a single relation: prototyping. You can inspect an
-object prototypes with the \texttt{protos} method (\lst{protos}).
+object prototypes with the \texttt{protos} method (\autoref{lst:protos}).
 
 \begin{lstlisting}[caption=Inspecting prototypes, label=lst:protos]
   var p = Pair.clone;
@@ -1233,7 +1233,7 @@ object prototypes with the \texttt{protos} method (\lst{protos}).
 \end{lstlisting}
 
 As expected, our fresh pair has one prototype, \lstinline|(nil, nil)|,
-which is Pair. We can check this as presented in \lst{proto-check}.
+which is Pair. We can check this as presented in \autoref{lst:proto-check}.
 
 \begin{lstlisting}[caption=Checking the prototype, label=lst:proto-check]
   // Lists 'head' method returns the first element
@@ -1253,7 +1253,7 @@ instance, \lstinline|p|, our clone of \lstinline|Pair|, has no
 ``first'' or ``second'' slots. Yet, \lstinline|p.first| and
 \lstinline|p.second| succeed because these slots are present in
 \lstinline|Pair|, which is \lstinline|p|'s prototype. This is
-illustrated by \lst{simple-lookup}.
+illustrated by \autoref{lst:simple-lookup}.
 
 \begin{lstlisting}[caption=Slot found by lookup, label=lst:simple-lookup]
   var p = Pair.clone;
@@ -1314,7 +1314,7 @@ x:
 \end{itemize}
 
 Thus, slots from the last prototype added take precedence over other
-prototype's slots (\lst{proto-prec}).
+prototype's slots (\autoref{lst:proto-prec}).
 
 \begin{lstlisting}[caption=Prototype precedence, label=lst:proto-prec]
   var proto1 = Object.clone;
@@ -1341,7 +1341,7 @@ prototype's slots (\lst{proto-prec}).
 \end{lstlisting}
 
 You can check where in the prototype hierarchy a slot is found with
-the \texttt{locateSlot} method (\lst{locateslot}). This is a very
+the \texttt{locateSlot} method (\autoref{lst:locateslot}). This is a very
 handful tool when inspecting an object.
 
 \begin{lstlisting}[caption=Using locateSlot, label=lst:locateslot]
@@ -1372,7 +1372,7 @@ slot, yet only one actual \lstinline|0| integer. Will modifying x in
 one of the clone change the prototype's "x", thus altering the
 prototype and the other clone as well?
 
-The answer is, of course, no, as illustrated by \lst{copy-on-write}.
+The answer is, of course, no, as illustrated by \autoref{lst:copy-on-write}.
 
 \begin{lstlisting}[caption=Copy on write in action,
   label=lst:copy-on-write]
@@ -1398,7 +1398,7 @@ The answer is, of course, no, as illustrated by \lst{copy-on-write}.
 
 This work thanks to copy-on-write: slots are first duplicated to the
 local object when they're updated, as we can check in
-\lst{check-copy-on-write}.
+\autoref{lst:check-copy-on-write}.
 
 \begin{lstlisting}[caption=Inspecting copy on write,
   label=lst:check-copy-on-write]
@@ -1426,7 +1426,7 @@ Now that we know the internals of \urbi's object model, we can start
 defining our own classes. For instance, we can define our own
 \texttt{Pair} class. We just have to create a pair, with its first and
 second slots. For this we use the \texttt{do} scope described in
-\autoref{section:constructs/do}. \lst{do-class}) defines a new
+\autoref{section:constructs/do}. \autoref{lst:do-class}) defines a new
 \texttt{Pair} class. The \texttt{asString} function is simply used to
 customize pairs printing - don't give it too much attention for now.
 
@@ -1460,7 +1460,7 @@ customize pairs printing - don't give it too much attention for now.
 
 That's it, we defined a pair that can be cloned at will! \urbi
 provides a shorthand to define classes as we did above: the
-\texttt{class} keyword (\lst{class}).
+\texttt{class} keyword (\autoref{lst:class}).
 
 \begin{lstlisting}[caption=Using the \texttt{class} construct,
   label=lst:class]
@@ -1481,7 +1481,7 @@ predefines a few slots, but this is not the point here.
 As we've seen, we can use the clone method on any object to obtain an
 identical object. Yet, some class provide more elaborated
 constructors, accessible by calling \texttt{new} instead of
-\texttt{clone}, potentially passing it arguments (\lst{pair-ctor}).
+\texttt{clone}, potentially passing it arguments (\autoref{lst:pair-ctor}).
 
 \begin{lstlisting}[caption=Calling constructors with \texttt{new},
   label=lst:pair-ctor]
@@ -1497,7 +1497,7 @@ same as \texttt{clone} by default.
 To define such constructors, prototypes only need to provide an
 \texttt{init} method, that will be called with the arguments given to
 new. For instance, we can improve our previous \texttt{Pair} class
-with a constructor (\lst{define-ctor}).
+with a constructor (\autoref{lst:define-ctor}).
 
 \begin{lstlisting}[caption=Defining constructors, label=lst:define-ctor]
   do MyPair
@@ -1530,7 +1530,7 @@ just like an integer or a string, enabling you to store them or pass
 them as arguments. For instance, you don't need to write
 \lstinline|function object.f(){/* ... */}| to insert a function in an
 object, you can simply use \texttt{setSlot}, as illustrated by
-\lst{first-class-functions}.
+\autoref{lst:first-class-functions}.
 
 % FIXME: doesn't work, toplevel, puke, etc
 \begin{lstlisting}[caption=First class functions,
@@ -1559,7 +1559,7 @@ take function as argument. For instance, consider the \texttt{all}
 function: given a list and a function, it applies the function to each
 element of the list, and returns whether all calls returned true. This
 enables to check very simply if all elements in a list verify a
-predicate (\lst{all}).
+predicate (\autoref{lst:all}).
 
 \begin{lstlisting}[caption=Functional programming: the \texttt{all}
   function, label=lst:all]
@@ -1585,7 +1585,7 @@ predicate (\lst{all}).
 
 Another nice feature is the ability to write lambda functions, which
 are anonymous functions. You can create a functional value as an
-expression, without naming it, with the syntax shown in \lst{lambda}.
+expression, without naming it, with the syntax shown in \autoref{lst:lambda}.
 
 \begin{lstlisting}[caption=Lambda function, label=lst:lambda]
   // Create an anonymous function
@@ -1598,7 +1598,7 @@ expression, without naming it, with the syntax shown in \lst{lambda}.
 \end{lstlisting}
 
 In fact, the \texttt{function} construct we saw earlier is only a
-shorthand for a variable assignment (\lst{function-sugar}).
+shorthand for a variable assignment (\autoref{lst:function-sugar}).
 
 \begin{lstlisting}[caption=The function sugar,
   label=lst:function-sugar]
@@ -1619,7 +1619,7 @@ needed. In \urbi, evaluation is strict by default, but you can ask a
 function not to evaluate its arguments, and do it by hand. This works
 by not specifying formal arguments. The function is provided with a
 \texttt{call} object that enables you to evaluate arguments
-(\lst{lazy}).
+(\autoref{lst:lazy}).
 
 \begin{lstlisting}[caption=Tweaking arguments evaluation,
   label=lst:lazy]
@@ -1651,7 +1651,7 @@ language, it uses a few logic operators. For instance, the logical and
 (\texttt{\&\&}) does not evaluate its right operand if the left
 operand is false (the result will be false anyway).
 
-\urbi logic operator mimic this behavior. \lst{short-circuits} shows
+\urbi logic operator mimic this behavior. \autoref{lst:short-circuits} shows
 how one can implement such a behavior.
 
 \begin{lstlisting}[caption=Implementing logic short circuits,
@@ -1708,7 +1708,7 @@ For now, we've separated our different commands with a semicolon
   operand is waited at the exit of the scope.
 \end{itemize}
 
-\lst{parallelism-operators} show usage of \texttt{\&} to launch two
+\autoref{lst:parallelism-operators} show usage of \texttt{\&} to launch two
 functions in parallel.
 
 \begin{lstlisting}[caption=Parallelism operator,
@@ -1755,7 +1755,7 @@ subtle:
   ``\texttt{\&}'' block to start executing anything, while it will run
   the code terminated by ``\texttt{,}'' immediately.
 \item Execution is blocked after a ``\texttt{\&}'' group until all its
-  children have finished (\lst{and-comma}).
+  children have finished (\autoref{lst:and-comma}).
 \end{itemize}
 
 \begin{lstlisting}[caption=Difference between ``\texttt{\&}'' and
@@ -1787,7 +1787,7 @@ include parallelism anywhere at no syntactical cost.
 The \texttt{detach} function backgrounds the execution of its
 argument. Its behavior is the same as the comma (\texttt{,}) operator,
 except the execution is completely detached, and not waited for at the
-end of the scope (\lst{detach}).
+end of the scope (\autoref{lst:detach}).
 
 \begin{lstlisting}[caption=Detach, label=lst:detach]
   function test()
@@ -1808,7 +1808,7 @@ feature. Any chunk of code can be tagged, by preceding it with a tag
 and a colon (\texttt{$:$}). Tag can be created with
 \lstinline|Tag.new("name")|. Giving tags a name is optional, yet it's
 probably a better idea since it will be used for many
-features. \lst{tagging} illustrates how to tag chunks of code.
+features. \autoref{lst:tagging} illustrates how to tag chunks of code.
 
 \begin{lstlisting}[caption=Tagging a block of code, label=lst:tagging]
   // Create a new tag
@@ -1825,7 +1825,7 @@ features. \lst{tagging} illustrates how to tag chunks of code.
 \end{lstlisting}
 
 You can use tag that wasn't declared previously, they will be created
-implicitly (\lst{implicit-tag}). However, this is fragile code since
+implicitly (\autoref{lst:implicit-tag}). However, this is fragile code since
 tags will be created in a global scope, the \texttt{Tag} object. This
 feature can be used when inputting test code in the toplevel to avoid
 bothering to declare each tag, yet it should be considered very bad
@@ -1859,7 +1859,7 @@ parallel. Tags have a few control methods:
 \item \texttt{unblock}: Stop blocking the tagged code.
 \end{itemize}
 
-\lst{freeze}, \lst{stop} and \lst{block} illustrate usage of these tag
+\autoref{lst:freeze}, \lst{stop} and \lst{block} illustrate usage of these tag
 features.
 
 \begin{lstlisting}[caption=Freezing/unfreezing code execution, label=lst:freeze]
@@ -1952,7 +1952,7 @@ features.
 In this section, we implement a more advanced example with
 parallelism.
 
-\lst{timeout} presents how to implement a \texttt{timeOut} function,
+\autoref{lst:timeout} presents how to implement a \texttt{timeOut} function,
 that takes code to execute and a timeout as arguments. It executes the
 code, and returns its return value. However, if the code execution
 takes longer than the given timeout, it aborts it, print
@@ -2003,7 +2003,7 @@ section.
 
 The first construct we will study is the \lstinline|at| keyword. Given
 a condition, and an expression, \lstinline|at| will evaluate the
-expression every time the condition becomes true (\lst{at}). That is,
+expression every time the condition becomes true (\autoref{lst:at}). That is,
 when a rising edge occurs on the condition.
 
 \begin{lstlisting}[caption=Using \texttt{at}, label=lst:at]
@@ -2031,7 +2031,7 @@ when a rising edge occurs on the condition.
 \end{lstlisting}
 
 A \lstinline|onleave| block can be appended to execute an expression
-when the expression becomes false --- that is, on falling edges (\lst{onleave}).
+when the expression becomes false --- that is, on falling edges (\autoref{lst:onleave}).
 
 \begin{lstlisting}[caption=Using \texttt{at ... onleave},
   label=lst:onleave]
@@ -2051,7 +2051,7 @@ when the expression becomes false --- that is, on falling edges (\lst{onleave}).
 
 The \lstinline|whenever| construct is similar to \lstinline|at|,
 except the expression evaluation is systematically restarted when it
-finishes as long as the condition stands true (\lst{whenever}).
+finishes as long as the condition stands true (\autoref{lst:whenever}).
 
 \begin{lstlisting}[caption=Using \texttt{whenever}, label=lst:whenever]
   var x = false;
@@ -2074,7 +2074,7 @@ finishes as long as the condition stands true (\lst{whenever}).
 
 Just like \lstinline|at| has \lstinline|onleave|, \lstinline|whenever|
 has \lstinline|else|: the given expression is evaluated as long as the
-condition is false (\lst{whenever-else}).
+condition is false (\autoref{lst:whenever-else}).
 
 \begin{lstlisting}[caption=Using \texttt{whenever ... else},
   label=lst:whenever-else]
@@ -2108,7 +2108,7 @@ condition is false (\lst{whenever-else}).
 \urbi enables you to define events, that can be caught with the
 \lstinline|at| and \lstinline|whenever| constructs we saw earlier. You
 can create events by cloning the \lstinline|Event| prototype. They can
-then be emitted with the \lstinline|emit| keyword (\lst{event}).
+then be emitted with the \lstinline|emit| keyword (\autoref{lst:event}).
 
 \begin{lstlisting}[caption=Using events, label=lst:event]
   var myEvent = Event.new;
@@ -2126,7 +2126,7 @@ then be emitted with the \lstinline|emit| keyword (\lst{event}).
 Both \lstinline|at| and \lstinline|whenever| have the same behavior on
 punctual events. However, you can emit an event for a certain
 duration, and \lstinline|whenever| will keep triggering for this
-duration (\lst{emit-duration}).
+duration (\autoref{lst:emit-duration}).
 
 \begin{lstlisting}[caption=Emitting events with a duration,
   label=lst:emit-duration]
